Grafico per genere admin e inizio grafica menu utente

--- a/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
+++ b/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
@@ -123,7 +123,7 @@
                                     <Font size="20.0" />
                                  </font>
                               </Label>
-                              <PieChart VBox.vgrow="ALWAYS" />
+                              <PieChart VBox.vgrow="ALWAYS" fx:id="tortaGenere"/>
                            </children>
                         </VBox>
                      </children>
