--- a/src/main/resources/Fxml/Client/ClientMenu.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenu.fxml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox spacing="0" styleClass="client_menu_container" stylesheets="@../../Styles/clientMenu.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientMenuController">
+<VBox spacing="0" styleClass="client_menu_container" stylesheets="@../../Styles/clientMenu.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientMenuController">
 
    <!-- Sezione Profilo -->
-   <VBox fx:id="profileSection" spacing="5">
+   <VBox fx:id="profileSection" alignment="TOP_CENTER" maxHeight="300.0" maxWidth="250.0" spacing="5">
       <children>
-         <ImageView fx:id="imageUtente" pickOnBounds="true" preserveRatio="true"> </ImageView>
-         <Label fx:id="nomeCognomeUtente" maxWidth="Infinity" text="" wrapText="true" />
-         <Label fx:id="emailUtente" maxWidth="Infinity" text="" wrapText="true" />
-         <Label fx:id="labelStatoAbbonamento" maxWidth="Infinity" text="" wrapText="true" />
+         <ImageView fx:id="imageUtente" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
+         <Label fx:id="nomeCognomeUtente" styleClass="label_nomeutente" textAlignment="CENTER" wrapText="true" />
+         <Label fx:id="emailUtente" styleClass="label_email" text="" textAlignment="CENTER" wrapText="true" />
+         <Label fx:id="labelStatoAbbonamento" styleClass="label_statoAbbonamento" text="" textAlignment="CENTER" wrapText="true" />
       </children>
       <padding>
          <Insets left="10" right="10" top="10" />
@@ -23,9 +27,9 @@
 
    <ScrollPane fitToWidth="true" hbarPolicy="NEVER" stylesheets="@../../Styles/clientMenu.css" VBox.vgrow="ALWAYS">
       <content>
-         <VBox fillWidth="true" spacing="5" styleClass="vbox" stylesheets="@../../Styles/clientMenu.css">
+         <VBox fillWidth="true" spacing="20.0" styleClass="vbox" stylesheets="@../../Styles/clientMenu.css">
             <padding>
-               <Insets left="10" right="10" top="10" />
+               <Insets left="10.0" right="10.0" top="10.0" />
             </padding>
             <children>
                <Button fx:id="dashboardButton" maxWidth="Infinity" mnemonicParsing="false" styleClass="my_button_window" text="Dashboard">
@@ -42,7 +46,7 @@
 
                <Button fx:id="prenotazioneButton" maxWidth="Infinity" mnemonicParsing="false" styleClass="my_button_window" text="Prenotazioni">
                   <graphic>
-                     <FontAwesomeIconView glyphName="CALENDAR" size="18" />
+                     <FontAwesomeIconView glyphName="CALENDAR" size="18" styleClass="my_button_window_FontAwesomeIconView" />
                   </graphic>
                </Button>
 
@@ -60,33 +64,43 @@
             </children>
          </VBox>
       </content>
+      <VBox.margin>
+         <Insets top="25.0" />
+      </VBox.margin>
    </ScrollPane>
 
-   <VBox alignment="CENTER" spacing="10" styleClass="footer" stylesheets="@../../Styles/clientMenu.css">
+   <VBox alignment="CENTER" prefHeight="163.0" prefWidth="222.0" styleClass="footer" stylesheets="@../../Styles/clientMenu.css">
       <padding>
-         <Insets left="10" right="10" top="10" />
+         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
       </padding>
       <children>
-         <Button fx:id="logoutButton" maxWidth="Infinity" mnemonicParsing="false" styleClass="my_button_window" text="Logout">
-            <graphic>
-               <FontAwesomeIconView glyphName="EXTERNAL_LINK" size="20" />
-            </graphic>
-         </Button>
-         <Button maxWidth="Infinity" mnemonicParsing="false">
-            <graphic>
-               <ImageView fitHeight="34" preserveRatio="true">
-                  <image>
-                     <Image url="@../../Images/moon.png" />
-                  </image>
-               </ImageView>
-            </graphic>
-         </Button>
-         <ImageView fitHeight="100" preserveRatio="true">
+         <ImageView fitHeight="67.0" fitWidth="140.0" preserveRatio="true">
             <image>
-               <Image url="@../../Images/LOGO.png" />
+               <Image url="@../../Images/LOGO_rettangolare.png" />
             </image>
          </ImageView>
+         <HBox fx:id="contentitoreLogoCambioTema" alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+            <children>
+               <Button fx:id="logoutButton" maxWidth="Infinity" mnemonicParsing="false" styleClass="my_button_window" text="Logout">
+                  <graphic>
+                     <FontAwesomeIconView glyphName="EXTERNAL_LINK" size="20" />
+                  </graphic>
+               </Button>
+               <Button fx:id="pulsanteCambioTema" maxWidth="Infinity" mnemonicParsing="false" styleClass="cambioTema">
+                  <graphic>
+                     <ImageView fx:id="lunettaPulsanteTema" fitHeight="34.0" preserveRatio="true">
+                        <image>
+                           <Image url="@../../Images/moon.png" />
+                        </image>
+                     </ImageView>
+                  </graphic>
+               </Button>
+            </children>
+         </HBox>
       </children>
    </VBox>
+   <padding>
+      <Insets top="20.0" />
+   </padding>
 
 </VBox>
