--- a/src/main/resources/Fxml/Client/DashboardClient.fxml
+++ b/src/main/resources/Fxml/Client/DashboardClient.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
@@ -18,7 +17,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane stylesheets="@../../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientDashboardController">
@@ -113,30 +114,58 @@
 
     <!-- Colonna destra -->
     <right>
-        <AnchorPane prefWidth="200.0" styleClass="client_menu_container" stylesheets="@../../Styles/clientMenu.css" BorderPane.alignment="CENTER">
+        <AnchorPane styleClass="client_menu_container" stylesheets="@../../Styles/clientMenu.css" BorderPane.alignment="CENTER">
             <children>
-                <!-- Calendario -->
-                <AnchorPane fx:id="containerCalendario" AnchorPane.leftAnchor="15" AnchorPane.topAnchor="55" />
-
-                <!-- Separatore orizzontale -->
-                <Separator AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="370" />
-
-                <!-- ChatBot area -->
-                <AnchorPane fx:id="chatBotContainer" AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="400">
-                    <children>
-                        <TextArea fx:id="chatArea" editable="false" wrapText="true" AnchorPane.bottomAnchor="40" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
-                        <TextField fx:id="inputField" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="80" />
-                        <Button fx:id="inviaButton" prefWidth="80" text="Invia" AnchorPane.bottomAnchor="0" AnchorPane.rightAnchor="0" />
-                    </children>
-                </AnchorPane>
-
-                <!-- Radio buttons -->
-                <RadioButton fx:id="btnPrenotato" text="Prenotato" AnchorPane.leftAnchor="15" AnchorPane.topAnchor="350" />
-                <RadioButton fx:id="btnPalestraChiusa" text="Palestra chiusa" AnchorPane.leftAnchor="112" AnchorPane.topAnchor="350" />
+            <VBox alignment="BOTTOM_CENTER" maxWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                      <!-- Calendario -->
+                      <AnchorPane fx:id="containerCalendario" />
+                  <HBox>
+                     <children>
+                        <Circle fill="#27374de5" radius="6.0" stroke="#27374d00" strokeType="INSIDE">
+                           <HBox.margin>
+                              <Insets right="5.0" />
+                           </HBox.margin>
+                        </Circle>
+                        <Label text="Prenotato">
+                           <font>
+                              <Font name="Arial Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Circle fill="#27374d7f" radius="6.0" stroke="TRANSPARENT" strokeType="INSIDE">
+                           <HBox.margin>
+                              <Insets left="10.0" right="5.0" />
+                           </HBox.margin>
+                        </Circle>
+                        <Label text="Giorno di chiusura">
+                           <font>
+                              <Font name="Arial Bold" size="12.0" />
+                           </font>
+                        </Label>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </HBox>
+      
+                      <!-- Separatore orizzontale -->
+                      <Separator />
+                  <Region VBox.vgrow="ALWAYS" />
+      
+                            <!-- ChatBot area -->
+                      <AnchorPane fx:id="chatBotContainer">
+                          <children>
+                              <TextField fx:id="inputField" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="80.0" />
+                              <Button fx:id="inviaButton" prefWidth="80" text="Invia" AnchorPane.bottomAnchor="0" AnchorPane.rightAnchor="0" />
+                              <TextArea fx:id="chatArea" editable="false" wrapText="true" AnchorPane.bottomAnchor="40" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" />
+                          </children>
+                      </AnchorPane>
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </VBox>
             </children>
-         <padding>
-            <Insets right="10.0" />
-         </padding>
         </AnchorPane>
     </right>
 
