--- a/src/main/resources/Fxml/Login.fxml
+++ b/src/main/resources/Fxml/Login.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -21,11 +20,11 @@
    <right>
       <HBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="330.0" styleClass="right_side_pane" stylesheets="@../Styles/login.css" BorderPane.alignment="CENTER">
          <children>
-            <Pane prefHeight="500.0" prefWidth="345.0">
+            <Pane prefHeight="500.0" prefWidth="345.0" styleClass="text_login">
                <children>
-                  <ImageView fitHeight="79.0" fitWidth="79.0" layoutY="431.0">
+                  <ImageView fitHeight="41.0" fitWidth="79.0" layoutX="1.0" layoutY="456.0" preserveRatio="true">
                      <image>
-                        <Image url="@../Images/LOGO.png" />
+                        <Image url="@../Images/LOGO_rettangolare.png" />
                      </image>
                   </ImageView>
                   <Label contentDisplay="CENTER" layoutX="106.0" layoutY="157.0" text="Sei nuovo?" textFill="WHITE">
@@ -38,7 +37,7 @@
                         <Font name="Arial Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Button fx:id="signupButton" layoutX="60.0" layoutY="290.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="210.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Registrati" />
+                  <Button fx:id="signupButton" layoutX="60.0" layoutY="266.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="210.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Registrati" />
                   <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
@@ -47,16 +46,16 @@
    <center>
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane prefHeight="500.0" prefWidth="670.0" stylesheets="@../Styles/login.css">
+            <AnchorPane id="sfondo_login" prefHeight="500.0" prefWidth="670.0" stylesheets="@../Styles/login.css">
                <children>
-                  <Text layoutX="268.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bentornato">
+                  <Text fill="WHITE" layoutX="268.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text_login" text="Bentornato">
                      <font>
                         <Font name="Arial Bold" size="25.0" />
                      </font>
                   </Text>
                   <VBox alignment="TOP_CENTER" layoutX="170.0" layoutY="99.0" prefHeight="357.0" prefWidth="330.0">
                      <children>
-                        <Label alignment="CENTER" prefHeight="20.0" prefWidth="82.0" text="Email:">
+                        <Label alignment="CENTER" prefHeight="20.0" prefWidth="82.0" styleClass="text_login" text="Email:">
                            <font>
                               <Font name="Arial Bold" size="14.0" />
                            </font>
@@ -72,7 +71,7 @@
                               <Insets top="5.0" />
                            </VBox.margin>
                         </TextField>
-                        <Label alignment="CENTER" prefHeight="20.0" prefWidth="169.0" text="Password:">
+                        <Label alignment="CENTER" prefHeight="20.0" prefWidth="169.0" styleClass="text_login" text="Password:">
                            <font>
                               <Font name="Arial Bold" size="14.0" />
                            </font>
@@ -87,13 +86,6 @@
                            </children>
                         </StackPane>
                         <VBox prefHeight="0.0" prefWidth="330.0">
-                           <children>
-                              <Label alignment="TOP_CENTER" text="password dimenticata?">
-                                 <font>
-                                    <Font size="10.0" />
-                                 </font>
-                              </Label>
-                           </children>
                            <VBox.margin>
                               <Insets top="3.0" />
                            </VBox.margin>
@@ -103,14 +95,17 @@
                               <Font name="Arial" size="12.0" />
                            </font>
                         </Label>
-                        <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="23.0" prefWidth="345.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Accedi">
+                        <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="23.0" prefWidth="642.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Accedi">
                            <VBox.margin>
                               <Insets top="30.0" />
                            </VBox.margin>
                         </Button>
                      </children>
+                     <padding>
+                        <Insets top="20.0" />
+                     </padding>
                   </VBox>
-                  <Button fx:id="eyeButton" layoutX="510.0" layoutY="217.0" mnemonicParsing="false" styleClass="my_button_toggle_pasword" stylesheets="@../Styles/login.css" text="🔍" />
+                  <Button fx:id="eyeButton" layoutX="510.0" layoutY="217.0" mnemonicParsing="false" styleClass="my_button_toggle_pasword" stylesheets="@../Styles/login.css" text="🔍" textFill="#27374d" />
                </children>
             </AnchorPane>
          </children>
