--- a/src/main/resources/Fxml/SignUp.fxml
+++ b/src/main/resources/Fxml/SignUp.fxml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.SignUpController">
+<BorderPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.SignUpController">
    <right>
       <HBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="330.0" styleClass="right_side_pane" stylesheets="@../Styles/login.css" BorderPane.alignment="CENTER">
          <children>
@@ -39,12 +49,12 @@
          <children>
             <AnchorPane prefHeight="500.0" prefWidth="670.0" stylesheets="@../Styles/login.css">
                <children>
-                  <Text layoutX="268.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Benvenuto">
+                  <Text layoutX="268.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text_login" text="Benvenuto">
                      <font>
                         <Font name="Arial Bold" size="25.0" />
                      </font>
                   </Text>
-                  <VBox alignment="TOP_CENTER" layoutX="170.0" layoutY="295.0" prefHeight="162.0" prefWidth="330.0">
+                  <VBox alignment="CENTER" layoutX="170.0" layoutY="337.0" prefHeight="120.0" prefWidth="330.0">
                      <children>
                         <VBox prefHeight="0.0" prefWidth="330.0">
                            <VBox.margin>
@@ -53,24 +63,16 @@
                         </VBox>
                         <Button fx:id="signUpButton" mnemonicParsing="false" prefHeight="23.0" prefWidth="345.0" styleClass="my_button_login" stylesheets="@../Styles/login.css" text="Registrati">
                            <VBox.margin>
-                              <Insets top="30.0" />
+                              <Insets />
                            </VBox.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="331.0" styleClass="my_button_google" stylesheets="@../Styles/login.css" text="Continua con Google">
-                           <VBox.margin>
-                              <Insets top="17.0" />
-                           </VBox.margin>
-                           <graphic>
-                              <FontAwesomeIconView glyphName="GOOGLE" size="16" text="" />
-                           </graphic>
                         </Button>
                      </children>
                   </VBox>
-                  <Pane prefHeight="313.0" prefWidth="670.0">
+                  <Pane layoutY="22.0" prefHeight="313.0" prefWidth="670.0">
                      <children>
-                        <VBox alignment="TOP_CENTER" layoutX="65.0" layoutY="91.0" prefHeight="215.0" prefWidth="270.0">
+                        <VBox alignment="TOP_CENTER" layoutX="65.0" layoutY="91.0" prefHeight="223.0" prefWidth="270.0">
                            <children>
-                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="82.0" text="Nome">
+                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="82.0" styleClass="text_login" text="Nome">
                                  <font>
                                     <Font name="Arial Bold" size="14.0" />
                                  </font>
@@ -91,7 +93,7 @@
                                     <Font name="Arial" size="12.0" />
                                  </font>
                               </Label>
-                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="169.0" text="Data di nascita:">
+                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="169.0" styleClass="text_login" text="Data di nascita:">
                                  <font>
                                     <Font name="Arial Bold" size="14.0" />
                                  </font>
@@ -105,7 +107,7 @@
                                  </VBox.margin>
                               </DatePicker>
                               <Label fx:id="labelDataErrata" prefHeight="18.0" prefWidth="304.0" text="Data di nascita non valida.." textFill="#f20505" visible="false" />
-                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="169.0" text="Password:">
+                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="169.0" styleClass="text_login" text="Password:">
                                  <font>
                                     <Font name="Arial Bold" size="14.0" />
                                  </font>
@@ -130,9 +132,9 @@
                               <Insets right="10.0" />
                            </padding>
                         </VBox>
-                        <VBox alignment="TOP_CENTER" layoutX="335.0" layoutY="91.0" prefHeight="221.0" prefWidth="270.0">
+                        <VBox alignment="TOP_CENTER" layoutX="335.0" layoutY="91.0" prefHeight="223.0" prefWidth="270.0">
                            <children>
-                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="82.0" text="Cognome:">
+                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="82.0" styleClass="text_login" text="Cognome:">
                                  <font>
                                     <Font name="Arial Bold" size="14.0" />
                                  </font>
@@ -149,7 +151,7 @@
                                  </VBox.margin>
                               </TextField>
                               <Label fx:id="labelErroreCognome" prefHeight="18.0" prefWidth="290.0" text="Cognome non valido..." textFill="#fa0808" visible="false" />
-                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="82.0" text="Email:">
+                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="82.0" styleClass="text_login" text="Email:">
                                  <font>
                                     <Font name="Arial Bold" size="14.0" />
                                  </font>
@@ -166,7 +168,7 @@
                                  </VBox.margin>
                               </TextField>
                               <Label fx:id="labelEmailNonValida" prefHeight="18.0" prefWidth="327.0" text="Email non valida.." textFill="#ec0505" visible="false" />
-                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="169.0" text="Ripeti password:">
+                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="169.0" styleClass="text_login" text="Ripeti password:">
                                  <font>
                                     <Font name="Arial Bold" size="14.0" />
                                  </font>
