Fix chat powerino non responsive

--- a/src/main/resources/Styles/Dashboard.css
+++ b/src/main/resources/Styles/Dashboard.css
@@ -40,6 +40,10 @@
     -fx-background-color: #DDE6ED;
 }
 
+#vbox_chatbot {
+    -fx-background-color: white;
+}
+
 .grafico{
     -fx-background-color: #DDE6ED;
 }
