--- a/src/main/resources/Styles/bannerStyle.css
+++ b/src/main/resources/Styles/bannerStyle.css
@@ -1,23 +1,15 @@
 .bannerino {
-    -fx-background-color: transparent;
+    -fx-background-color: #9DB2BF;
     -fx-alignment: center;
-    -fx-border-color: black;
-    -fx-border-width: 2px;
-    -fx-border-radius: 10px;
+    -fx-border-color: #27374D;
+    -fx-border-width: 1;
+    -fx-background-radius: 10;
+    -fx-border-radius: 10;
 }
 
 .bannerino .label {
-    -fx-font-size: 14px;
-    -fx-text-fill: #333;
+    -fx-font-size: 1.2em;
+    -fx-text-fill: #27374D;
     -fx-font-weight: bold;
 }
 
-.DisplayBanner {
-    -fx-background-color: linear-gradient(from 50% 0% to 50% 100%, rgba(255,255,255,1) 0%, rgba(255,122,41,1) 99%);
-    -fx-padding: 50;
-    -fx-text-fill: #333;
-    -fx-font-size: 14px;
-    -fx-font-weight: bold;
-
-
-}
