--- a/src/main/resources/Styles/bannerStyle.css
+++ b/src/main/resources/Styles/bannerStyle.css
@@ -1,5 +1,5 @@
 .bannerino {
-    -fx-background-color: #9DB2BF;
+    -fx-background-color:  linear-gradient(from 0% 0% to 100% 100%, #9DB2BF, #27374D);
     -fx-alignment: center;
     -fx-border-color: #27374D;
     -fx-border-width: 1;
@@ -9,7 +9,7 @@
 
 .bannerino .label {
     -fx-font-size: 1.2em;
-    -fx-text-fill: #27374D;
+    -fx-text-fill: #dde6ed;
     -fx-font-weight: bold;
 }
 
