--- a/src/main/resources/Fxml/Client/ClientMenuView/Scheda.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/Scheda.fxml
@@ -1,42 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.control.SplitPane?>
-<BorderPane xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.SchedaController"
-            prefWidth="1920" prefHeight="820">
 
-    <!-- Top bar -->
-    <top>
-        <HBox prefHeight="100">
-            <Button fx:id="eliminaSchedaButton"
-                    mnemonicParsing="false"
-                    text="EliminaScheda"/>
-        </HBox>
-    </top>
+<BorderPane id="contenitoreSchermata" prefHeight="820" prefWidth="1920" stylesheets="@../../../Styles/scheda.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.SchedaController">
 
     <!-- Divisione orizzontale responsive -->
     <center>
-        <SplitPane dividerPositions="0.5" fx:id="splitPane">
+        <SplitPane fx:id="splitPane" dividerPositions="0.5" BorderPane.alignment="TOP_CENTER">
             <items>
-                <ScrollPane>
+                <ScrollPane id="contenitoreListaEsercizi" fitToWidth="true">
                     <content>
-                        <VBox fx:id="containerEsercizi" VBox.vgrow="ALWAYS"/>
+                        <VBox fx:id="containerEsercizi" alignment="TOP_CENTER" fillWidth="false" spacing="10.0" VBox.vgrow="ALWAYS" />
                     </content>
                 </ScrollPane>
-                <ScrollPane>
+                <ScrollPane id="contenitoreScheda" fitToWidth="true">
                     <content>
-                        <VBox fx:id="containerSchedaAllenamento" VBox.vgrow="ALWAYS"/>
+                        <VBox fx:id="containerSchedaAllenamento" alignment="TOP_CENTER" spacing="10.0" VBox.vgrow="ALWAYS" />
                     </content>
                 </ScrollPane>
             </items>
         </SplitPane>
     </center>
+   <bottom>
+        <HBox alignment="CENTER_RIGHT" BorderPane.alignment="CENTER">
+            <Button fx:id="eliminaSchedaButton" mnemonicParsing="false" styleClass="bottoni" text="EliminaScheda">
+            <HBox.margin>
+               <Insets />
+            </HBox.margin></Button>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+        </HBox>
+   </bottom>
 
 </BorderPane>
-
