Fine implementazione grafica schede e fix problema richiesta

--- a/src/main/resources/Styles/scheda.css
+++ b/src/main/resources/Styles/scheda.css
@@ -51,13 +51,25 @@
     -fx-padding: 10 30;
     -fx-pref-width: 200;
     -fx-wrap-text: true;
-
 }
+
 .button:hover {
     -fx-cursor: hand;
     -fx-background-color: #27374d;
     -fx-text-fill: #DDE6EDFF;
     -fx-fill: #DDE6EDFF;
+}
+
+.bottoneElimaScheda {
+    -fx-background-color: #526D82;
+    -fx-text-fill: #27374DFF;
+    -fx-font-size: 1.2em;
+    -fx-font-weight: bold;
+    -fx-font-family: "Arial";
+    -fx-border-radius: 30;
+    -fx-background-radius: 30;
+    -fx-padding: 10 30;
+    -fx-pref-width: 200;
 }
 
 .titoloContenitore{
@@ -72,12 +84,46 @@
     -fx-font-weight: bold;
 }
 
-.testo{-fx-text-fill: yellow;}
+.testo{
+    -fx-text-fill: #27374D;
+    -fx-font-size: 1.2em;
+    -fx-font-weight: bold;
+}
 
 .rigaEsercizio{
     -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #9DB2BF, #27374D);
     -fx-border-color:#27374D;
-    -fx-boder-widht: 2;
+    -fx-border-widht: 2;
     -fx-background-radius: 10;
     -fx-border-radius: 10;
+}
+
+#SplitPane > .split-pane-divider {
+    -fx-background-color: #526D82;
+    -fx-padding: 0;
+}
+
+#bottoniCreaChiedi {
+    -fx-background-color: #526D82;
+    -fx-text-fill: #27374DFF;
+    -fx-font-size: 1.5em;
+    -fx-font-weight: bold;
+    -fx-font-family: "Arial";
+    -fx-border-radius: 30;
+    -fx-background-radius: 30;
+    -fx-padding: 10;
+    -fx-pref-width: 350;
+}
+
+#bottoniCreaChiedi:hover {
+    -fx-cursor: hand;
+    -fx-background-color: #27374d;
+    -fx-text-fill: #DDE6EDFF;
+    -fx-fill: #DDE6EDFF;
+}
+
+#labelNoScheda {
+    -fx-text-fill: #27374D;
+    -fx-font-size: 1.2em;
+    -fx-font-weight: bold;
 }
