--- a/src/main/resources/Fxml/Client/ClientMenuView/Scheda.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/Scheda.fxml
@@ -12,7 +12,7 @@
 
     <!-- Divisione orizzontale responsive -->
     <center>
-        <SplitPane fx:id="splitPane" dividerPositions="0.5" BorderPane.alignment="TOP_CENTER">
+        <SplitPane fx:id="splitPane" dividerPositions="0.5" BorderPane.alignment="TOP_CENTER" id="SplitPane">
             <items>
                 <ScrollPane id="contenitoreListaEsercizi" fitToWidth="true">
                     <content>
@@ -29,7 +29,7 @@
     </center>
    <bottom>
         <HBox alignment="CENTER_RIGHT" BorderPane.alignment="CENTER">
-            <Button fx:id="eliminaSchedaButton" mnemonicParsing="false" styleClass="bottoni" text="EliminaScheda">
+            <Button fx:id="eliminaSchedaButton" mnemonicParsing="false" styleClass="bottoneElimaScheda" text="Elimina scheda">
             <HBox.margin>
                <Insets />
             </HBox.margin></Button>
