--- a/src/main/resources/Fxml/Client/ClientMenuView/SchermataCreazioneScheda.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/SchermataCreazioneScheda.fxml
@@ -3,16 +3,21 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.SchermataCreazioneSchedaController">
+<BorderPane id="contenitoreSchermata" stylesheets="@../../../Styles/scheda.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.SchermataCreazioneSchedaController">
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-       <children>
-           <Label text="Nessuna scheda associata all'utente. Inizia a crearne una o richiedila all'admin" />
-           <Button fx:id="createScheda" mnemonicParsing="false" text="Crea la tua scheda" />
-           <Button fx:id="askScheda" mnemonicParsing="false" text="Chiedi che te ne venga assegnata una" />
-       </children>
+      <VBox alignment="CENTER" fillWidth="false" spacing="10.0" BorderPane.alignment="CENTER">
+         <children>
+           <Label id="labelNoScheda" alignment="CENTER" text="Nessuna scheda associata all'utente. Inizia a crearne una o richiedila all'admin." />
+            <HBox id="contenitoreSceltaScheda" alignment="CENTER" fillHeight="false" spacing="20.0">
+             <children>
+                 <Button id="bottoniCreaChiedi" fx:id="createScheda" mnemonicParsing="false" text="Crea la tua scheda" />
+                 <Button id="bottoniCreaChiedi" fx:id="askScheda" mnemonicParsing="false" text="Chiedi che te ne venga assegnata una" />
+             </children>
+            </HBox>
+         </children>
       </VBox>
    </center>
 </BorderPane>
